fixed some layout bugs

--- a/src/less/TxtChat.less
+++ b/src/less/TxtChat.less
@@ -10,7 +10,9 @@
 
 .topBar {
     height: @topBarHeight;
-    padding: 2em;
+    padding: 0.3em;
+    text-align: right;
+    z-index: 1;
 }
 /* Chat wrapper */
 .chatWrapper {
